<resources>
    <string name="app_name">Biner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu">Menú</string>
    <string name="carrito">Carrito</string>
    <string name="hservicio">Horario de Atencion</string>
    <string name="sesionI">Iniciar Sesión</string>
    <string name="sesionC">Cerrar Sesión</string>
    <string name="slogan">El servicio más rápido</string>
    <string name="avisoSesion">Usuario Invitado</string>
    <string name="usuariocel">Usuario/celular</string>
    <string name="contraseña">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Regresar</string>
    <string name="cUsuario">Crear usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidoP">Apellido P</string>
    <string name="apellidoM">Apellido M</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="telefono">Telefono</string>
    <string name="title_activity_menu_logueado">Bienvenido</string>
    <string name="cantidad">Cantidad</string>
    <string name="enviar">Enviar</string>
    <string name="addCarrito">Agregar</string>
    <string name="action_settings">Settings</string>
    <string name="ubicacion">Agregar Lugar de entrega</string>

    <string-array name="cantidades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
