<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu"
            android:icon="@drawable/menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/ubicacion"
            android:icon="@drawable/ubicacion"
            android:title="@string/ubicacion" />

        <item
            android:id="@+id/carrito"
            android:icon="@drawable/carrito"
            android:title="@string/carrito" />
        <item
            android:id="@+id/hservicio"
            android:icon="@drawable/hservicio"
            android:title="@string/hservicio" />
        />
    </group>


</menu>
